fixing navbar class and adding z-index

--- a/src/common/navigation/NavBar.css
+++ b/src/common/navigation/NavBar.css
@@ -8,6 +8,7 @@
 	top: 0;
 	bottom: 0;
 	height: 100%;
+	z-index: 9999;
 }
 
 ul li {
